                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 05-04-2005 removed: My Music Albums, Artists, and Genres views.  Use My Music Library instead.
  - 05-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 05-04-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 05-04-2005 added: Python patches [ 1166891 ] and [ 1176789 ] from gimblefoot.
  - 05-04-2005 fixed: List/thumb controls couldn't move right off the spincontrol.
  - 05-04-2005 fixed: Search for home dir checks for keymap.xml as well as the skin folder.
  - 05-04-2005 fixed: Video Genre/Actors now show only those that are associated with a valid movie.
  - 05-04-2005 changed: Video views now use the CGUIViewControl to handle the views.
  - 05-04-2005 fixed: problems with alphanumeric sorting (numbers came after characters)
  - 05-04-2005 fixed: IMDb problem (memory overflow with huge numbers of returned movies).
  - 05-04-2005 changed: Nav view now uses alphanumeric sorting.
  - 04-04-2005 fixed: re-scanning music dirs and music thumbnail caching
  - 04-04-2005 fixed: Scissors clipping crash in FullscreenVideo->GUI switch.
  - 04-04-2005 changed: DVD/Video off DVD/LAN cache defaults to 4Mb.
  - 04-04-2005 changed: Default regexps for filestacking.
  - 04-04-2005 changed: Sort orders when sorting by Artist + Album now also include the album + artist + tracknumber info so everything is easier to find.
  - 04-04-2005 added: Skin files for popup player controls.  Mapped to START by default.  Users of other skins may want to remap START back to the stop action.
  - 04-04-2005 changed: IMDb lookups return the list of found movies even if there is only 1 (allows manual lookup if it got it wrong.)